# supafreak

./: .gitignore  README.md  supafreak.yml
Wireframes/: News Feed.epgz
beeware-tutorial/helloworld/: LICENSE  pyproject.toml
beeware-tutorial/helloworld/src/helloworld/: app.py
beeware-tutorial/helloworld/src/helloworld.dist-info/: METADATA
sfnewsticker/: LICENSE  README.rst  pyproject.toml
sfnewsticker/src/sfnewsticker/: __main__.py  app.py  atom_feedparser.py  rdf_feedparser.py
sfnewsticker/src/sfnewsticker.dist-info/: METADATA
